clusters/management-hub/headlamp/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headlamp
  namespace: headlamp
  annotations:
    kubernetes.io/ingress.class: traefik
    external-dns.alpha.kubernetes.io/hostname: gitops.nwlnexus.net
    external-dns.alpha.kubernetes.io/target: ing.mgmt.nwlnexus.net
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gitops.nwlnexus.net`)
      kind: Rule
      services:
        - name: headlamp
          port: 4466
  tls:
    secretName: headlamp-tls
